# Approaching-Goal-using-QR-Code

./: CMakeLists.txt  Decoded_QRcode.txt  Goal.txt  Postures.txt  README.md  manifest.xml  rosconfig.env
include/: CSVReader.h  CSVReader.h~
launch/: qrcode_detection.launch
msg/: Markers.msg  PerceptInfo.msg~  Pose.msg  Pose.msg~
msg_gen/cpp/include/QRcode_detection/: Goal.h  Landmark.h  Markers.h  PerceptInfo.h  Pose.h  UIConfirm.h  UIMessage.h
msg_gen/lisp/: Goal.lisp  Landmark.lisp  Markers.lisp  PerceptInfo.lisp  Pose.lisp  QRcode_detection-msg.asd  UIConfirm.lisp  UIMessage.lisp  _package.lisp  _package_Goal.lisp  _package_Landmark.lisp  _package_Markers.lisp  _package_PerceptInfo.lisp  _package_Pose.lisp  _package_UIConfirm.lisp  _package_UIMessage.lisp
src/: CMakeLists.txt~  CSVReader.cpp  QRcode_detection.cpp  QRcode_detection.cpp~  QRcode_detection.h  Robot.cpp  Robot.cpp~  corobot.h~  naorobot.h~  obstacle_avoidance.cpp~  obstacle_avoidance.h~  qrcode_detection.cpp  qrcode_detection.cpp~
src/QRcode_detection/msg/: _Goal.py  _Landmark.py  _Markers.py  _PerceptInfo.py  _Pose.py  _UIConfirm.py  _UIMessage.py  __init__.py
src/QRcode_detection/srv/: _GetCoMap.py
